--- a/RevVoc.html
+++ b/RevVoc.html
@@ -43,15 +43,8 @@
         console.log(wordsList);
 
         //enregistré l'array en JSON
-        var JSONexport = JSON.stringify(wordsList);
-        console.log(JSONexport);
-
-        // Écrire la chaîne JSON dans un fichier .json
-        //var jsonBlob = new Blob([JSON.stringify(wordsList)],{
-        //  type: 'application/json'
-        // });
-        //var link=window.URL.createObjectURL(jsonBlob);
-        //window.location=link;
+        //var JSONexport = JSON.stringify(wordsList);
+        //console.log(JSONexport);
       }
 
     function SaveList() {
